--- a/MobileShop/MobileShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/MobileShop/MobileShop.WebUI/Views/ProductManager/Index.cshtml
@@ -12,7 +12,16 @@
 <table class="table">
     <tr>
         <th>
+
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Brand)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.OS)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.RAM)
@@ -32,43 +41,48 @@
         <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
+        
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RAM)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InternalMemory)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CameraMP)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DisplaySize)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        <img class="img-thumbnail" style="height:50px" src="~/Content/ProductImages/@item.Image" />
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Brand)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.OS)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.RAM)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.InternalMemory)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CameraMP)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.DisplaySize)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Description)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Price)
+    </td>
+    
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
+</tr>
 }
 
 </table>
